objects/Consensus__cFeature__c.object
<CustomObject>
    <fields>
        <fullName>Consensus__ExtId__c</fullName>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__View__c</fullName>
        <label>View</label>
        <referenceTo>Consensus__cView__c</referenceTo>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>cFeature</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cFeatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>